2008-02-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* doxygen.cfg: Update doxygen configuration via doxygen -u.
	Extract static and private members.

	* configure.ac: Integrate new boost searching macros.
	Create doxygen documentation in the doc directory.
	* src/Makefile.am: Likewise.
	
	* m4/boost.m4: Use boost.m4 from http://repo.or.cz/w/boost.m4.git.

2008-01-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/AggPluginInterface.cpp: Set plugin name.

2008-01-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/AggPluginInterface.cpp: Adapt to new dlvhex plugin API.
	* include/AggPluginInterface.h: Likewise.

	* m4/boost.m4: New file.

	* configure.ac: Bump version to 0.2.0.
	Fix boost searching.

	* bootstrap.sh: Use autoreconf.

2007-07-19  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* bootstrap.sh: Fixed inclusion of m4 folder.
	* include/AggPluginInterface.h: Removed hardcoded "mask" id.
	* src/AggPluginInterface.cpp (MASKTERM), (projectInput): Likewise.
	* testsuite/run-dlvhex-tests.sh: Fixed plugin lib path.

2007-07-18  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/AggPluginInterface.h: Added min, max.
	* src/AggPluginInterface.cpp (AggAtom), (getAtoms): Likewise.

	* testsuite/Makefile.am: Added testfiles.
	* testsuite/aggregates.test: Likewise.

	* testsuite/min1.hex: Added.
	* testsuite/min1.out: Added.
	* testsuite/min2.hex: Added.
	* testsuite/min2.out: Added.
	* testsuite/minmax1.hex: Added.
	* testsuite/minmax1.out: Added.

	* NEWS: Added info.

2007-07-17  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Fixed testsuite bug.
