@@ -1,3 +1,7 @@
+2009-08-24  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* m4/boost.m4: Updating to version currently used in dlvhex trunk.
+
 2008-02-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* doxygen.cfg: Update doxygen configuration via doxygen -u.
